--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,14 @@
-<p>This is the about view.</p>
+<div class="row">
+	<div class="col-sm-3 col-md-2 sidebar">
+		<ul>
+			<li ng-repeat="category in vm.categories">
+				<a href="">
+					{{category.name}}
+				</a>
+			</li>
+		</ul>
+	</div>
+	<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+		
+	</div>
+</div>
