--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,11 @@
-<div class="jumbotron">
-  <h1>{{vm.title}}</h1>
-</div>
-
-<div class="row marketing">
-  <ul>
-    <li ng-repeat="category in vm.categories">
-      {{category.name}}
-    </li>
-  </ul>
+<div class="row">
+	<div class="col-sm-3 col-md-2 sidebar">
+	</div>
+	<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+		<ul>
+			<li ng-repeat="country in vm.countries">
+				{{country.name}}
+			</li>
+		</ul>
+	</div>
 </div>
