--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,14 +1,22 @@
 <div class="row">
-	<div class="col-sm-3 col-md-2 sidebar">
-		<ul>
-			<li ng-repeat="category in vm.categories">
-				<a href="">
+	<ul class="nav navbar-nav navbar-right">
+		<li>
+			
+	<a href="" ng-click="vm.setCurrentCategory(null)">Show All</a>
+		</li>
+	</ul>
+	<div class="col-sm-4 sidebar">
+		<ul class="nav nav-sidebar">	
+			<li ng-repeat="category in vm.categories" ng-class="{'active':isCurrentCategory(category)}">
+				<a href="" ng-click="vm.setCurrentCategory(category)">
 					{{category.name}}
 				</a>
 			</li>
 		</ul>
 	</div>
-	<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-		
+	<div class="col-sm-8 main">
+		<div ng-repeat="bookmark in vm.bookmarks | filter:{category:vm.currentCategory.name}">
+			{{bookmark.name}}
+		</div>
 	</div>
 </div>
