--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,14 @@
 <div class="row">
-	<div class="col-sm-3 col-md-2 sidebar">
+	<div class="col-sm-4 sidebar">
+		<ul>
+			<li ng-repeat="region in vm.sub_regions">
+				<a href="">
+					{{region.name}}
+				</a>
+			</li>
+		</ul>
 	</div>
-	<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+	<div class="col-sm-8 main">
 		<ul>
 			<li ng-repeat="country in vm.countries">
 				{{country.name}}
